<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:title="@string/converter"
        android:elevation="4dp"
        android:foregroundTint="@color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--app:layout_constraintBottom_toTopOf="@id/linearLayout"-->




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_resul">

                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:backgroundTintMode="screen"
                    android:hint="@string/result"
                    android:layout_alignParentBottom="true"
                    android:text=""
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint"
                    android:textSize="22sp"
                    android:visibility="visible"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="35sp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:onClick="copyToClipboard2"
                    android:layout_above="@+id/result"
                    app:srcCompat="@drawable/copy_to_clipboard"
                    android:contentDescription="@string/copy_to_cliboard"
                    tools:ignore="RtlSymmetry"
                    app:tint="@color/white" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_resul"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:layout_weight=".8"
                    android:backgroundTintMode="screen"
                    android:gravity="center"
                    android:hint="@string/enter_the_number"
                    android:paddingStart="25dp"
                    android:paddingHorizontal="25dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint"
                    android:textSize="20sp"
                    android:visibility="visible"
                    tools:ignore="RtlSymmetry" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".2"
                    android:textColor="@color/buttonColor"
                    app:tint="@color/white"
                    android:gravity="center"
                    android:text="@string/paste"
                    android:textStyle="bold"

                    android:onClick="copyToClipboard1"
                    android:contentDescription="@string/paste_from_clipboard"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fromSystem"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_white"
                    android:gravity="center"
                    android:onClick="fromSys"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.5"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/convert_to"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/right_arrow"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/toSystem"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_white"
                    android:gravity="center"
                    android:onClick="toSys"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <Button
                android:id="@+id/convert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/pink"
                android:hapticFeedbackEnabled="true"
                android:onClick="convert"
                android:padding="10dp"
                android:shadowColor="#3F51B5"
                android:text="@string/convert"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-9464104790853930/9727174374">

            </com.google.android.gms.ads.AdView>








            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:onClick="getDigit"
                        android:layout_marginBottom="5dp"
                        android:tag="7"
                        app:srcCompat="@drawable/seven"
                        android:contentDescription="@string/_7_button" />


                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:onClick="getDigit"
                        android:layout_marginBottom="5dp"
                        android:tag="4"

                        app:srcCompat="@drawable/four"
                        android:contentDescription="@string/_4_button" />







                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginHorizontal="5dp"
                        android:onClick="getDigit"
                        android:tag="1"
                        app:srcCompat="@drawable/one"
                        android:contentDescription="@string/_1_button" />
                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="getDigit"
                        android:tag="0"
                        app:srcCompat="@drawable/zero"
                        android:contentDescription="@string/_0_button" />




                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:onClick="getDigit"
                        android:layout_marginBottom="5dp"
                        android:tag="8"
                        app:srcCompat="@drawable/eight"
                        android:contentDescription="@string/_8_button" />



                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:contentDescription="@string/_5_button"
                        android:onClick="getDigit"
                        android:layout_marginBottom="5dp"
                        android:tag="5"
                        app:srcCompat="@drawable/five" />
                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:onClick="getDigit"
                        android:layout_marginBottom="5dp"
                        android:tag="2"
                        app:srcCompat="@drawable/two"
                        android:contentDescription="@string/_2_button" />

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:onClick="getDigit"
                        android:layout_marginBottom="5dp"
                        android:tag="A"
                        app:srcCompat="@drawable/a"
                        android:contentDescription="@string/a_button" />






                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="getDigit"

                        android:tag="9"
                        app:srcCompat="@drawable/nine"
                        android:contentDescription="@string/_9_button" />

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:contentDescription="@string/_6_button"
                        android:onClick="getDigit"
                        android:tag="6"
                        android:layout_marginBottom="5dp"
                        app:srcCompat="@drawable/six" />





                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:onClick="getDigit"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="5dp"
                        android:tag="3"
                        app:srcCompat="@drawable/three"
                        android:contentDescription="@string/_3_button" />



                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:contentDescription="@string/b_button"
                        android:onClick="getDigit"
                        android:layout_marginBottom="5dp"
                        android:tag="B"
                        app:srcCompat="@drawable/b" />






                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="getDigit"
                        android:tag="F"
                        app:srcCompat="@drawable/f"
                        android:contentDescription="@string/f_button" />



                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginHorizontal="5dp"
                        android:onClick="getDigit"
                        android:tag="E"
                        app:srcCompat="@drawable/e"
                        android:contentDescription="@string/e_button" />

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginHorizontal="5dp"
                        android:contentDescription="@string/d_button"
                        android:onClick="getDigit"
                        android:tag="D"
                        app:srcCompat="@drawable/d" />



                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginHorizontal="5dp"
                        android:onClick="getDigit"
                        android:tag="C"
                        app:srcCompat="@drawable/c"
                        android:contentDescription="@string/c_button" />







                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:longClickable="true"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:onClick="deleteDigit"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="5dp"
                        android:tag="del"
                        app:srcCompat="@drawable/del"
                        android:contentDescription="@string/delete_button" />
                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="5dp"
                        android:contentDescription="@string/clear_button"
                        android:onClick="clear"
                        android:tag="clr"
                        app:srcCompat="@drawable/clr" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="55dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="5dp"
                        android:onClick="convert"
                        app:cardBackgroundColor="@color/pink"
                        android:layout_height="110dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="="
                            android:textSize="40sp"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:gravity="center"/>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>



    </ScrollView>

</LinearLayout>